# zillow

./: .clang-format  .gitmodules  Constraints.hpp  DataStructures.hpp  Database.hpp  Hash.hpp  Operators.hpp  Serialization.hpp  Utils.hpp  XMLParser.hpp  Zillow.hpp  ZillowWebCrawler.hpp  build_all.sh  build_boost.sh  build_hpx.sh  build_rocksdb.sh  build_tbb.sh  build_using_autogen.sh  build_using_cmake.sh  build_using_configure.sh  build_using_make.sh  download_source_code.sh  get_build_options.sh  notes.md  todo.org
+zillow/: DeepComps.m  DeepSearchResults.m  HouseFactTable.m  MarkdownWriter.m  Utilities.m  xml2struct.m
data/: 5_7_16.xlsx
data/redfin/: README.md
data/zillow/: README.md
src/: .clang-format  ZillowWebCrawler.hpp  setup_path.m
src/+zillow/: DatabaseUtils.m  DeepComps.m  DeepSearchResults.m  FileWriter.m  HouseFactTable.m  MarkdownWriter.m  PropertyData.m  Query.m  UpdateHouseDetailsTable.m  UpdateHouseTable.m  UpdatedPropertyDetails.m  Utilities.m
src/testing/: CMakeLists.txt  zillowCrawler.cpp
testing/: CMakeLists.txt  collect_data.cpp  deepComps.cpp  deepCompsResults.xml  deepSearchResults.cpp  deepSearchResults.xml  simple_usage.m  tSQLite.cpp  tUnitTests.cpp  tXML.cpp  test_queries.m  updatedPropertyDetails.cpp  updatedPropertyDetails.xml
zillow/: Constraints.hpp  DataStructures.hpp  Database.hpp  XMLParser.hpp  ZillowWebCrawler.hpp
